--- a/posts/citations/mojo_citations.bib
+++ b/posts/citations/mojo_citations.bib
@@ -173,3 +173,9 @@
   url = {https://www.olcf.ornl.gov/wp-content/uploads/2019/10/ORNL_Application_Readiness_Workshop-AMD_GPU_Basics.pdf},
   note = {Workshop slides covering AMD GPU architecture and programming fundamentals.}
 }
+@misc{nvidia_shared_memory_stats,
+  author = {NVIDIA Corporation},
+  title = {CUDA Kernel-Level Shared Memory Statistics},
+  url = {https://docs.nvidia.com/gameworks/content/developertools/desktop/analysis/report/cudaexperiments/kernellevel/memorystatisticsshared.htm},
+  note = {Official documentation on shared memory statistics in CUDA kernels.}
+}
