--- a/posts/citations/mojo_citations.bib
+++ b/posts/citations/mojo_citations.bib
@@ -179,3 +179,10 @@
   url = {https://docs.nvidia.com/gameworks/content/developertools/desktop/analysis/report/cudaexperiments/kernellevel/memorystatisticsshared.htm},
   note = {Official documentation on shared memory statistics in CUDA kernels.}
 }
+@misc{leimao_cuda_shared_memory_bank,
+  author = {Lei Mao},
+  title = {CUDA Shared Memory Bank},
+  year = {2022},
+  url = {https://leimao.github.io/blog/CUDA-Shared-Memory-Bank/},
+  note = {Blog post explaining CUDA shared memory bank structure and bank conflicts.}
+}
