Add mojo functions citations

--- a/posts/citations/mojo_citations.bib
+++ b/posts/citations/mojo_citations.bib
@@ -186,3 +186,15 @@
   url = {https://leimao.github.io/blog/CUDA-Shared-Memory-Bank/},
   note = {Blog post explaining CUDA shared memory bank structure and bank conflicts.}
 }
+@misc{mojo_copy_dram_to_sram_async,
+  author = {Modular, Inc.},
+  title = {copy\_dram\_to\_sram\_async API Reference},
+  url = {https://docs.modular.com/mojo/kernels/layout/layout_tensor/copy_dram_to_sram_async/},
+  note = {Official documentation for the copy\_dram\_to\_sram\_async method in Mojo.}
+}
+@misc{mojo_async_copy_wait_all,
+  author = {Modular, Inc.},
+  title = {async\_copy\_wait\_all API Reference},
+  url = {https://docs.modular.com/mojo/stdlib/gpu/memory/async_copy_wait_all},
+  note = {Official documentation for the async\_copy\_wait\_all method in Mojo.}
+}
