--- a/posts/citations/mojo_citations.bib
+++ b/posts/citations/mojo_citations.bib
@@ -198,3 +198,10 @@
   url = {https://docs.modular.com/mojo/stdlib/gpu/memory/async_copy_wait_all},
   note = {Official documentation for the async\_copy\_wait\_all method in Mojo.}
 }
+@misc{nvidia_ampere_unified_shared_memory,
+  author = {NVIDIA Corporation},
+  title = {Ampere Tuning Guide: Unified Shared Memory and L1/Texture Cache},
+  year = {2023},
+  url = {https://docs.nvidia.com/cuda/ampere-tuning-guide/index.html#unified-shared-memory-l1-texture-cache},
+  note = {Official documentation on unified shared memory and L1/texture cache in NVIDIA Ampere GPUs.}
+}
