--- a/posts/citations/mojo_citations.bib
+++ b/posts/citations/mojo_citations.bib
@@ -205,3 +205,11 @@
   url = {https://docs.nvidia.com/cuda/ampere-tuning-guide/index.html#unified-shared-memory-l1-texture-cache},
   note = {Official documentation on unified shared memory and L1/texture cache in NVIDIA Ampere GPUs.}
 }
+@misc{nvidia_blackwell_unified_shared_memory,
+  author = {NVIDIA Corporation},
+  title = {Blackwell Tuning Guide: Unified Shared Memory and L1/Texture Cache},
+  year = {2025},
+  url = {https://docs.nvidia.com/cuda/blackwell-tuning-guide/index.html#unified-shared-memory-l1-texture-cache},
+  note = {Official documentation on unified shared memory and L1/texture cache in NVIDIA Blackwell GPUs.}
+}
+
