--- a/posts/2025-07-20-gpu-puzzles-p2.qmd
+++ b/posts/2025-07-20-gpu-puzzles-p2.qmd
@@ -1496,38 +1496,21 @@ This is the expression: `range((size + TPB - 1) // TPB)`
 
 The key idea here is: Step through k by TPB each time; if there's a leftover chunk, do one last tile for it.
 
-```
-size = 17      TPB = 8
-k:  0···7 | 8···15 | 16···17
-tiles:  0      1        2 
-```
+![Mapping of elements to tiles when size=17 and TPB=8](mojo_gpu_puzzles/p14_tile.png){fig-align='center'}
 
 The above example needs 3 tiles. Ceiling division captures this with a simple formula:
 $$
 \lceil\frac{size}{TPB}\rceil = \lfloor\frac{size + TPB - 1}{TPB}\rfloor
 $$
 
-#### Which element does **my** thread fetch this tile?
+#### Which element does a thread fetch in this tile?
 
 Each thread brings in one A value and one B value. Thread indices inside the block:
 
-```
-(local_row, local_col) ← (threadIdx.y, threadIdx.x)
-```
-
 Here, `tile` is the "which-chunk-of-k" loop counter.  
 
-Inside a block each thread is responsible for one output element C[global_row, global_col].  
+Inside a block each thread is responsible for one output element `C[global_row, global_col]`.  
 For that element you need every pair (A[row, k], B[k, col]) as k runs.
-
-**Thread-to-Memory Mapping**: Understanding how 1024 threads per block map to memory is crucial. With TPB=32, we get a 32×32 thread block—not random sizing! Each **warp** (32 consecutive threads) maps to one row of the tile, ensuring 32 threads can issue **one coalesced 128-byte burst** when loading consecutive elements.
-
-```
-Warp 0:  threads  0-31  -> tile row 0
-Warp 1:  threads 32-63  -> tile row 1
-...
-Warp 31: threads 992-1023 -> tile row 31
-```
 
 For tile `t`:
 
@@ -1536,18 +1519,7 @@ A: a[global_row, t*TPB + local_col]
 B: b[t*TPB + local_row, global_col]
 ```
 
-ASCII picture for a 4×4 tile (TPB = 4) when `t = 1`:
-
-```
-            k-dimension ->
-           |---- tile 0 -----|---- tile 1 -----|
-A(row) ... 0 1 2 3  | 4 5 6 7  | 8 ...
-                ^^^— thread (·,local_col) pulls this
-
-           |---- tile 0 -----|---- tile 1 -----|
-B(col) ... 0 |               |
-             v thread (local_row,·) pulls this
-```
+![Tiled 3×3 matmul: Each thread loads one A and one B element per tile, computes a partial sum, then syncs. Tile size = 3, 9 threads per block.](mojo_gpu_puzzles/p14_tiled_matmul_annotated.png){fig-align='center'}
 
 The two loads align on the same `k` slice (`t*TPB … t*TPB+TPB-1`), ensuring every multiply in this tile has operands in shared memory.
 
@@ -1560,7 +1532,7 @@ GPUs coalesce global memory when _adjacent threads read adjacent addresses_. Wit
 
 Without the swap, one matrix would be fetched "strided" collapsing into 32 separate memory transactions per warp - a 32× slowdown on bandwidth-bound kernels.
 
-**Quick primer**: Shared memory isn't one monolithic block. It's chopped into 32 independent "banks" [@nvidia_shared_memory_stats][@leimao_cuda_shared_memory_bank] each a tiny SRAM with its own read/write port that can service one 32-bit access per cycle. A warp hits peak bandwidth only when every thread lands in a different bank (or all hit the same address, which hardware can broadcast). If two threads target different addresses inside the same bank during the same cycle, the hardware must serialize them, referred to as a **bank conflict**.
+**Quick primer**: Shared memory isn't one monolithic block. It's chopped into 32 independent "banks"[@nvidia_shared_memory_stats] [@leimao_cuda_shared_memory_bank]. Each is a tiny SRAM with its own read/write port that can service one 32-bit access per cycle. A warp hits peak bandwidth _only when_ every thread lands in a different bank (or all hit the same address, which hardware can broadcast). If two threads target different addresses inside the same bank during the same cycle, the hardware must serialize them, referred to as a **bank conflict**.
 
 Beyond coalescing, our tile layout also sidesteps these conflicts. Because `b_shared[k, threadIdx.x]` maps each thread to a distinct bank (while `a_shared[threadIdx.y, k]` is broadcast-friendly), all 32 memory ports stay busy with zero serialization.
 
@@ -1572,7 +1544,7 @@ Exact numbers vary with GPU, kernel, and precision [@nvidia_ampere_unified_share
 
 I’m still learning the dark art of GPU perf tuning, so I’ll save the details for a future post once I’ve had more time to experiment.
 
-**TLDR:** Each tile: sync (barrier), compute, shift to next tile, repeat. But this is just the baseline—there’s always a deeper optimization rabbit hole! 
+**TLDR:** For each tile, we will sync (barrier), compute, shift to next tile, repeat. But this is just the baseline - there’s always a deeper optimization rabbit hole! 
 
 ### Layout Tensor
 
@@ -1610,4 +1582,4 @@ These four archetypes form the building blocks for complex ML kernels, each with
 
 Next up: Moar GPU kernels, taclking our favorite technique for the past few years: **Attention**! 
 
-Thanks for sticking around! I hope you picked up a trick or two! Spotted a bug or have a sharper optimization? Fire off a PR or issue in the repo, or ping me on [Twitter/X](https://x.com/shubhamg2208). Happy hacking!
+Thanks for sticking around! I hope you picked up a trick or two! Spotted a bug or have a sharper optimization? Open an issue in the repo, or ping me on [Twitter/X](https://x.com/shubhamg2208). Happy hacking!
