--- a/posts/citations/mojo_citations.bib
+++ b/posts/citations/mojo_citations.bib
@@ -186,6 +186,13 @@
   url = {https://leimao.github.io/blog/CUDA-Shared-Memory-Bank/},
   note = {Blog post explaining CUDA shared memory bank structure and bank conflicts.}
 }
+@misc{mojo_layouttensor_tile,
+  author = {Modular, Inc.},
+  title = {LayoutTensor.tile API Reference},
+  url = {https://docs.modular.com/mojo/kernels/layout/layout_tensor/LayoutTensor/#tile},
+  note = {Official documentation for the LayoutTensor tile method in Mojo.}
+}
+
 @misc{mojo_copy_dram_to_sram_async,
   author = {Modular, Inc.},
   title = {copy\_dram\_to\_sram\_async API Reference},
